  (friebe)
- Fixed util.Properties::readBool() to return TRUE if any of "1", "yes",
  "true" or "on" is given (see bug #26)
  (friebe)
- Fixed lang.Process to not throw exceptions if non-qualified command
  is given (e.g. new Process('ssh')) by resolving PATH environment
  (friebe)
- Fixed problem with xpcli -c / -cp option conflicting with the run 
  Command class' -c / -cp options
  (friebe)


Version 5.6.5, released 2007-02-04
----------------------------------
SVN version: 11747

Heads up!
~~~~~~~~~
- Removed deprecated lang.reflect.Argument::isPassedByReference() method
  (friebe)
- Changed cast() core functionality to no longer change the object given,
  throw a lang.ClassCastException in case of errors, throw a 
  lang.ClassNotFoundException in case the given type does not exist,
  no longer support primitives (will result in a lang.IllegalArgumentException)
  and to return xp::null() if NULL is given
  (friebe)

RFCs
~~~~
- Implemented RFC #0152: Arguments vs. Parameters
  (friebe)
- Implemented RFC #0153: HTTP protocol versions
  (friebe)
- Implemented RFC #0151: Runtime class
  (friebe)
- Implemented RFC #0150: Before and after methods for testcases
  (friebe)
- Implemented RFC #0010: Type casts
  (friebe)

Bugfixes
~~~~~~~~
- Fix double utf8 decode in SOAPHTTPTransport::retrieve() by ignoring the
  Content-Type header (XMLParser already determines the encoding and uses
  ISO-8859-1 as default output encoding)
  (hinckel, kiesel)
- Added "static" keyword to System::putEnv() und System::getEnv()
  (hinckel)
- Ensured arguments passed to XSL callbacks are utf8_decode()d and return 
  values are utf8_encode()d
  (friebe)
- Fixed peer.ftp.FtpFile not reloading file details (size, date, permissions,
  ...) after a successfull upload
  (friebe)
- Fixed peer.ftp.FtpDir::findEntry() 
  (gellweiler, kiesel)
- Fixed FTP server API to parse parameters to NLST correctly and report
  directories as single entities if "-d" is given in NLST and LIST