@@ -43,6 +43,11 @@ Bugfixes
   Command class' -c / -cp options
   (friebe)
 
+Addon
+~~~~~
+- added SQL function to week() to extrakt the "week of year" from a
+  date field
+  (wagner)
 
 Version 5.6.5, released 2007-02-04
 ----------------------------------
